--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - "${APP_PORT}:80"
     env_file: .env
-    volumes:
-      - .:/var/www/html
+    # volumes:
+    #   - .:/var/www/html
     depends_on:
       - postgres-db
     environment:
@@ -48,7 +48,8 @@ services:
       - tienda-network
 
 volumes:
-  db_data: 
+  db_data:
+
 
 networks:
   tienda-network:
